[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/StartGameHover.png" type="Texture" id=1]
[ext_resource path="res://assets/StartGame.png" type="Texture" id=2]
[ext_resource path="res://assets/ExitGame.png" type="Texture" id=3]
[ext_resource path="res://game_background_2/layers/sky.png" type="Texture" id=4]
[ext_resource path="res://TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://assets/ExitGameHover.png" type="Texture" id=6]
[ext_resource path="res://assets/GameTitle.png" type="Texture" id=7]
[ext_resource path="res://assets/click.ogg" type="AudioStream" id=8]
[ext_resource path="res://BatSheet.png" type="Texture" id=9]
[ext_resource path="res://assets/Ove-Melaa-Whoozer.ogg" type="AudioStream" id=10]
[ext_resource path="res://Bat.gd" type="Script" id=11]
[ext_resource path="res://game_background_2/layers/clouds_2.png" type="Texture" id=12]
[ext_resource path="res://assets/InstructionsHover.png" type="Texture" id=13]
[ext_resource path="res://assets/Instructions.png" type="Texture" id=14]
[ext_resource path="res://assets/Credits.png" type="Texture" id=15]
[ext_resource path="res://assets/CreditsHover.png" type="Texture" id=16]

[sub_resource type="Animation" id=1]
resource_name = "Flying"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=2]
resource_name = "Flying"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="TitleScreen" type="Node"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 160, 92 )
scale = Vector2( 0.166667, 0.17037 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 160, 92 )
scale = Vector2( 0.166667, 0.17037 )
texture = ExtResource( 12 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 920.0
margin_bottom = 378.0
rect_scale = Vector2( 0.26, 0.32 )
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 20.0
margin_right = 1240.0
margin_bottom = 538.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 238.0
texture = ExtResource( 7 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 90.0
margin_top = 72.0
margin_right = 1330.0
margin_bottom = 1032.0
rect_scale = Vector2( 0.12, 0.12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2"]
margin_right = 1240.0
margin_bottom = 960.0
size_flags_horizontal = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="MarginContainer2/VBoxContainer2"]
margin_right = 1240.0
margin_bottom = 237.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 1 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer2/VBoxContainer2"]
margin_top = 241.0
margin_right = 1240.0
margin_bottom = 478.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 6 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer2/VBoxContainer2"]
margin_top = 482.0
margin_right = 1240.0
margin_bottom = 719.0
texture_normal = ExtResource( 14 )
texture_focused = ExtResource( 13 )

[node name="MarginContainer3" type="MarginContainer" parent="."]
margin_left = 125.0
margin_top = 160.0
margin_right = 1365.0
margin_bottom = 397.0
rect_scale = Vector2( 0.08, 0.08 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3"]
margin_right = 1240.0
margin_bottom = 237.0

[node name="TextureButton4" type="TextureButton" parent="MarginContainer3/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 237.0
texture_normal = ExtResource( 15 )
texture_focused = ExtResource( 16 )

[node name="Bat" type="Position2D" parent="."]
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="Bat"]
position = Vector2( 46.311, 124.966 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )
vframes = 4
hframes = 3
frame = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bat"]
anims/Flying = SubResource( 1 )

[node name="Bat2" type="Position2D" parent="."]
script = ExtResource( 11 )
direction = 1

[node name="Sprite" type="Sprite" parent="Bat2"]
position = Vector2( 276.396, 123.496 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )
vframes = 4
hframes = 3
frame = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bat2"]
anims/Flying = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -320.0
margin_bottom = -180.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
anims/FadeOut = SubResource( 3 )
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="MarginContainer3/VBoxContainer/TextureButton4" to="." method="_on_TextureButton4_pressed"]
